# mock-wp-pulumi

./: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
components/: backend.py  frontend.py  network.py
